# EffekseerForCocos2d-x

./: CreateEffekseerFiles.py  CreateEffekseerFiles_v4.py  CreatePackage.py  Help_En.html  Help_Ja.html  README.md  azure-pipelines.yml  package.bat  readme.txt
.github/workflows/: package.yml
Players/Cocos2d-x_v3/: Effekseer.cpp  Effekseer.h  EffekseerNative.cpp  EffekseerNative.h  EffekseerRendererNative.cpp  EffekseerRendererNative.h
Players/Cocos2d-x_v4/: CMakeLists.txt
Players/Cocos2d-x_v4/Effekseer/: Effekseer.SIMD.h  Effekseer.h
Players/Cocos2d-x_v4/Effekseer/Effekseer/: Effekseer.Base.Pre.h
Players/Cocos2d-x_v4/Effekseer/Effekseer/SIMD/: Effekseer.SIMD4f_NEON.h  Float4_NEON.h
Players/Cocos2d-x_v4/Effekseer/Effekseer/Utils/: Effekseer.CustomAllocator.cpp
Players/Cocos2d-x_v4/EffekseerForCocos2d-x/: CMakeLists.txt  EffekseerForCocos2d-x.cpp  EffekseerForCocos2d-x.h
Players/Cocos2d-x_v4/EffekseerForCocos2d-x/GL/: Effekseer+GL.cpp
Players/Cocos2d-x_v4/EffekseerForCocos2d-x/Metal/: Effekseer+Metal.mm
Players/Cocos2d-x_v4/EffekseerMaterialCompiler/Metal/: EffekseerMaterialCompilerMetal.cpp  EffekseerMaterialCompilerMetal.h
Players/Cocos2d-x_v4/EffekseerRendererLLGI/: EffekseerRendererLLGI.MaterialLoader.cpp  EffekseerRendererLLGI.Renderer.cpp  EffekseerRendererLLGI.RendererImplemented.h  EffekseerRendererLLGI.VertexBuffer.h
Players/Cocos2d-x_v4/EffekseerRendererMetal/: CMakeLists.txt
Players/Cocos2d-x_v4/EffekseerRendererMetal/EffekseerRenderer/: EffekseerRendererMetal.Renderer.mm
Samples/3D/Classes/: HelloWorldScene.cpp  HelloWorldScene.h
Samples/3D/Resources/: Homing_Laser01.efk
Samples/Network/Classes/: HelloWorldScene.cpp  HelloWorldScene.h
Samples/Simple/Classes/: AppDelegate.cpp  AppDelegate.h  HelloWorldScene.cpp  HelloWorldScene.h
Samples/Simple/Resources/: HolySandstorm.efk  Laser01.efk
Test/SimpleTest/Classes/: HelloWorldScene.cpp  HelloWorldScene.h
Tests/Delay/Classes/: HelloWorldScene.cpp  HelloWorldScene.h
docs/: base.css  index.html  index.md  index_en.html  index_ja.html  index_jp.html  index_zh_cn.html  index_zh_tw.html
